@@ -55,6 +55,8 @@ typedef enum
   CMD_SCREEN_LYRICS,
   CMD_LYRICS_UPDATE,
   CMD_INTERRUPT,
+  CMD_GO_ROOT_DIRECTORY,
+  CMD_GO_PARENT_DIRECTORY,
   CMD_QUIT
 } command_t;
 
