@@ -98,7 +98,7 @@ static help_text_row_t help_text[] =
   { 0, CMD_PLAY,           N_("Play") },
   { 0, CMD_DELETE,         NULL },
   { 0, CMD_CLEAR,          NULL },
-  { 0, CMD_LIST_MOVE_UP,   N_("Move song up") },
+  { 1, CMD_LIST_MOVE_UP,   N_("Move song up") },
   { 0, CMD_LIST_MOVE_DOWN, N_("Move song down") },
   { 0, CMD_ADD,            NULL },
   { 0, CMD_SAVE_PLAYLIST,  NULL },
@@ -113,6 +113,8 @@ static help_text_row_t help_text[] =
   { 0, CMD_SELECT,         NULL },
   { 0, CMD_SAVE_PLAYLIST,  NULL },
   { 0, CMD_DELETE,         N_("Delete playlist") },
+  { 0, CMD_GO_PARENT_DIRECTORY, NULL },
+  { 0, CMD_GO_ROOT_DIRECTORY, NULL },
   { 0, CMD_SCREEN_UPDATE,  NULL },
 
 #ifdef ENABLE_SEARCH_SCREEN
