@@ -1,3 +1,8 @@
+2006-11-8 Andreas Obergrusberger <tradiaz@yahoo.de>
+  * Daniel added the functionality to go to
+    the parent and root directory via shortcu
+  * updated ncmpc.pot
+
 2006-11-5 Andreas Obergrusberger <tradiaz@yahoo.de>
   * spanish translation updated
 
